--- a/index.html
+++ b/index.html
@@ -1,38 +1,72 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="estilos/style.css">
-    <link rel="shortcut icon" href= "img/icono.png">
+    <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title> TANDIL FLY </title>
-
+    <title>TANDIL FLY</title>
 </head>
-<body id="gridHome">
-    <header class="border">
-    <h1 class="propiedadesMarca">Tandil Fly </h1> 
-    <h2 class="animate__animated animate__fadeInRight">El destino que desee, a su medida.</h2>
-    </header>
-
-    <nav class="navIndex">
-                    <div><a href="index.html">Home</a></div>
-                    <div><a href="paginas/servicios.html">Servicios</a></div>
-                    <div><a href="paginas/quienes-somos.html">Nosotros</a></div>
-                    <div><a href="paginas/flota.html">Flota</a></div>
-                    <div><a href="paginas/contacto.html">Contacto</a></div>
-                    
-    </nav>
-
-    <main class="border">
-            <img class="learHome" src="img/learjet.jpg" alt="learjet">
-    </main>
-
-        <hr>
-
-    <footer class="border"> Copyright 2022</footer>
-
 <body>
-    
+    <div class="container-fluid">
+    <header>
+        <div class="container-fluid">
+            <h1>Tandil Fly </h1> 
+            <h2 class="animate__animated animate__fadeInRight">El destino que desee, a su medida.</h2>
+        </div>
+    </header>
+    <nav>
+    <ul class="nav justify-content-end">
+        <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+        <li class="nav-item">
+          <a class="nav-link" href="paginas/servicios.html">Servicios</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="paginas/quienes-somos.html">Nosotros</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="paginas/flota.html">Flota</a>
+          </li>
+        <li class="nav-item">
+            <a class="nav-link" href="paginas/contacto.html">Contacto</a>
+          </li>
+      </ul>
+    </nav>
+    <main>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./img/learjet.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./img/king.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./img/avionresponsive.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+    </main>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <footer>
+        <div class="container-fluid">
+            <h4>COPYRIGHT 2022</h4> 
+        </div>
+    </footer>
+</body>
 </html>
