--- a/paginas/quienes-somos.html
+++ b/paginas/quienes-somos.html
@@ -1,42 +1,58 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="../estilos/style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="shortcut icon" href= "../img/icono.png">
     <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quienes somos</title>
-
+    <title>Servicios</title>
 </head>
-
 <body>
-    <header>
-        <h1 class="propiedadesMarca">Tandil Fly </h1> 
-        <h2 class="animate__animated animate__fadeInRight">El destino que desee, a su medida.</h2>
-    </header>
-
-    <nav class="navServicios">
-        <div class="divNavTablet"><a href="../index.html">Home</a></div>
-        <div class="divNavTablet"><a href="servicios.html">Servicios</a></div>
-        <div class="divNavTablet"><a href="quienes-somos.html">Nosotros</a></div>
-        <div class="divNavTablet"><a href="flota.html">Flota</a></div>
-        <div class="divNavTablet"><a href="contacto.html">Contacto</a></div>
-</nav>
-
-    <main class="mainNosotros">
-        <h3 class="quienesSomosEstilo">Quienes somos</h3>
-            <p>Somos una empresa de transporte aéreo regulada por la Administración Nacional de Aviación Civil, desde 2019.
-                Nuestro eje central es brindar un servicio de excelencia para clientes exclusivos, para ello, contamos con aeronaves modernas y tripulaciones de vasta experiencia en el sector.
-            </p>
-
-            <img class="tripulacion" src="../img/tripulacion.jpg">
-    </main>
-
-    <footer>Copyright 2022</footer>
-
+    <div class="container-fluid">
+        <header>
+            <div class="container-fluid">
+                <h1>Tandil Fly </h1> 
+                <h2 class="animate__animated animate__fadeInRight">El destino que desee, a su medida.</h2>
+            </div>
+        </header>
+        <nav>
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+                <a class="nav-link" href="../index.html">Home</a>
+              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="servicios.html">Servicios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="quienes-somos.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="flota.html">Flota</a>
+              </li>
+            <li class="nav-item">
+                <a class="nav-link" href="contacto.html">Contacto</a>
+              </li>
+          </ul>
+        </nav>
+        <main>
+            <div class="container-fluid">
+                <h3>Quienes somos</h3>
+                    <p>Somos una empresa de transporte aéreo regulada por la Administración Nacional de Aviación Civil, desde 2019.
+                        Nuestro eje central es brindar un servicio de excelencia para clientes exclusivos, para ello, contamos con aeronaves modernas y tripulaciones de vasta experiencia en el sector.
+                    </p>
+                    <img class="tripulacion" src="../img/tripulacion.jpg">
+            </div>
+        </main>
+    </div>
+    <footer>
+        <div class="container-fluid">
+            <h4>COPYRIGHT 2022</h4> 
+        </div>
+    </footer>  
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> 
 </body>
-
-</html>
