--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -12,7 +12,6 @@
     <title>Servicios</title>
 </head>
 <body>
-    <div class="container-fluid">
         <header>
             <div class="container-fluid">
                 <h1>Tandil Fly </h1> 
@@ -41,51 +40,50 @@
         <main>
             <h3>Nuestros servicios</h3>
             <div class="container-fluid">
-                <div class="row">
-                  <div class="col">
-                    <div class="card" style="width: 30rem;">
-                        <img src="../img/taxi.jpg" class="card-img-top" alt="taxi">
-                        <div class="card-body">
-                          <p class="card-text">TAXI AEREO</p>
-                        </div>
+              <div class="row justify-content-evenly">
+                <div class="col-lg-4 col-sm-12" >
+                  <div class="card">
+                    <img src="../img/taxi.jpg" class="card-img-top" alt="taxi">
+                    <div class="card-body">
+                      <p class="card-text">TAXI AEREO</p>
+                    </div>
                   </div>
-                  </div>
-                  <div class="col">
-                    <div class="card" style="width: 30rem;">
-                        <img src="../img/privado.jpg" class="card-img-top" alt="taxi">
-                        <div class="card-body">
-                          <p class="card-text">VUELOS PRIVADOS</p>
-                        </div>
+                </div>
+                <div class="col-lg-4 col-sm-12">
+                  <div class="card" >
+                    <img src="../img/privado.jpg" class="card-img-top" alt="taxi">
+                    <div class="card-body">
+                      <p class="card-text">VUELOS PRIVADOS</p>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="container-fluid">
-                <div class="row">
-                  <div class="col">
-                    <div class="card" style="width: 30rem;">
-                        <img src="../img/sanitario.jpg" class="card-img-top" alt="taxi">
-                        <div class="card-body">
-                          <p class="card-text">VUELOS SANITARIOS</p>
-                        </div>
+              <div class="row justify-content-evenly">
+                <div class="col-lg-4 col-sm-12" >
+                  <div class="card">
+                    <img src="../img/sanitario.jpg" class="card-img-top" alt="taxi">
+                    <div class="card-body">
+                      <p class="card-text">VUELOS SANITARIOS</p>
+                    </div>
                   </div>
-                  </div>
-                  <div class="col">
-                    <div class="card" style="width: 30rem;">
-                        <img src="../img/turistico.jpg" class="card-img-top" alt="taxi">
-                        <div class="card-body">
-                          <p class="card-text">PASEOS TURISTICOS</p>
-                        </div>
+                </div>
+                <div class="col-lg-4 col-sm-12" >
+                  <div class="card">
+                    <img src="../img/turistico.jpg" class="card-img-top" alt="taxi">
+                    <div class="card-body">
+                      <p class="card-text">PASEOS TURISTICOS</p>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </main>
-    </div> 
     <footer>
       <div class="container-fluid">
           <h4>COPYRIGHT 2022</h4> 
       </div>
-  </footer>   
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>   
 </body>
 </html>
