hice sitio responsive con bootstrap hasta pagina servicios

--- a/paginas/flota.html
+++ b/paginas/flota.html
@@ -2,29 +2,43 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="../estilos/style.css">
     <link rel="shortcut icon" href= "../img/icono.png">
+    <link rel="stylesheet" href="..//css/bootstrap.css">
     <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <link rel="stylesheet" href="../estilos/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flota</title>
 
 </head>
 
 <body>
-    <header><h1 class="propiedadesMarca">Tandil Fly </h1> 
-        <h2 class="animate__animated animate__fadeInRight">El destino que desee, a su medida.</h2>
+    <header>
+        <div class="container-fluid">
+            <h1>Tandil Fly </h1> 
+            <h2 class="animate__animated animate__fadeInRight">El destino que desee, a su medida.</h2>
+        </div>
     </header>
-
-    <nav class="navServicios">
-        <div class="divNavTablet"><a href="../index.html">Home</a></div>
-        <div class="divNavTablet"><a href="servicios.html">Servicios</a></div>
-        <div class="divNavTablet"><a href="quienes-somos.html">Nosotros</a></div>
-        <div class="divNavTablet"><a href="flota.html">Flota</a></div>
-        <div class="divNavTablet"><a href="contacto.html">Contacto</a></div>
-    </nav>
-
+    <nav>
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+                <a class="nav-link" href="../index.html">Home</a>
+              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="servicios.html">Servicios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="quienes-somos.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="flota.html">Flota</a>
+              </li>
+            <li class="nav-item">
+                <a class="nav-link" href="contacto.html">Contacto</a>
+              </li>
+          </ul>
+        </nav>
     <main class="mainFlota"> 
         <h2 class="nuestraFlota1">Nuestra flota</h2>
         <div class="sectorLear">
