--- a/paginas/quienes-somos.html
+++ b/paginas/quienes-somos.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <link rel="stylesheet" href="../estilos/style.css">
     <title>Servicios</title>
 </head>
 <body>
@@ -40,12 +41,14 @@
         </nav>
         <main>
             <div class="container-fluid">
-                <h3>Quienes somos</h3>
+                    <h3>Quienes somos</h3>
                     <p>Somos una empresa de transporte aéreo regulada por la Administración Nacional de Aviación Civil, desde 2019.
                         Nuestro eje central es brindar un servicio de excelencia para clientes exclusivos, para ello, contamos con aeronaves modernas y tripulaciones de vasta experiencia en el sector.
                     </p>
+            <div class="container-fluid">
                     <img class="tripulacion" src="../img/tripulacion.jpg">
-            </div>
+                </div>
+                </div>
         </main>
     </div>
     <footer>
