--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <link rel="stylesheet" href="../estilos/style.css">
     <title>Servicios</title>
 </head>
 <body>
@@ -41,7 +42,7 @@
             <h3>Nuestros servicios</h3>
             <div class="container-fluid">
               <div class="row justify-content-evenly">
-                <div class="col-lg-4 col-sm-12" >
+                <div class="col-lg-5 col-sm-5" >
                   <div class="card">
                     <img src="../img/taxi.jpg" class="card-img-top" alt="taxi">
                     <div class="card-body">
@@ -49,7 +50,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-sm-12">
+                <div class="col-lg-5 col-sm-5">
                   <div class="card" >
                     <img src="../img/privado.jpg" class="card-img-top" alt="taxi">
                     <div class="card-body">
@@ -59,7 +60,7 @@
                 </div>
               </div>
               <div class="row justify-content-evenly">
-                <div class="col-lg-4 col-sm-12" >
+                <div class="col-lg-5 col-sm-5" >
                   <div class="card">
                     <img src="../img/sanitario.jpg" class="card-img-top" alt="taxi">
                     <div class="card-body">
@@ -67,7 +68,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-sm-12" >
+                <div class="col-lg-5 col-sm-5" >
                   <div class="card">
                     <img src="../img/turistico.jpg" class="card-img-top" alt="taxi">
                     <div class="card-body">
