--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="../paginas/servicios.html">SERVICIOS</a>
+              <a class="nav-link active" href="./paginas/servicios.html">SERVICIOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="../paginas/quienes-somos.html">NOSOTROS</a>
+              <a class="nav-link active" href="./paginas/quienes-somos.html">NOSOTROS</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="../paginas/flota.html">FLOTA</a>
             </li><li class="nav-item">
-              <a class="nav-link active" href="../paginas/contacto.html">CONTACTO</a>
+              <a class="nav-link active" href="./paginas/contacto.html">CONTACTO</a>
             </li>
           </ul>
         </div>
